# xydata-oracle

./: IMPLEMENTATION_SUMMARY.md  LOGO_IMPLEMENTATION_CHECKLIST.md  LOGO_INTEGRATION_COMPLETE.md  QUICK_REFERENCE.md  README.md
app/: globals.css  layout.tsx  page.tsx
app/analytics/: page.tsx
app/dashboard/: page.tsx
app/feeds/: page.tsx
app/requests/: page.tsx
app/settings/: page.tsx
components/layout/: DashboardLayout.tsx  Header.tsx
components/oracle/: DataFeedCard.tsx  OracleDashboard.tsx  RequestForm.tsx  TransactionLog.tsx  VerificationProof.tsx
docs/: API_REFERENCE.md  ARCHITECTURE.md  BRAND_ASSETS.md  DEPLOYMENT.md  HEADER_COMPONENT_REFERENCE.md  LOGO_DESIGN_GUIDE.md  LOGO_EMBEDDING_INSTRUCTIONS.md  LOGO_INTEGRATION_GUIDE.md  LOGO_PLACEMENT_GUIDE.md  LOGO_SUMMARY.md
python-scripts/: README.md  deploy.sh  requirements.txt  test_oracle.py
solana-program/: Anchor.toml  Cargo.toml  README.md
solana-program/src/: lib.rs
