[package]
name = "xy_data_oracle"
version = "0.1.0"
description = "XyData Oracle - Decentralized Data Marketplace with Proof Verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.29"
anchor-spl = "0.29"
solana-program = "1.17"
spl-token = "3.5"
sha2 = "0.10"

[dev-dependencies]
anchor-client = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
